# xoap

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  README.md  Xargo.toml  memory.x
.cargo/: config
Client/: Cargo.toml
Client/src/: main.rs
Server/: Cargo.toml
Server/src/: main.rs
course_description/: main.tex  swedish.ldf
course_description/Sections/: Introduction.tex
examples/: simple.rs
nucleo/: Cargo.toml
nucleo/app/: Cargo.toml  Cargo.toml.orig  memory.x
nucleo/app/src/: main.rs
nucleo/src/: main.rs
src/: client.rs  header.rs  lib.rs  main.rs  options.rs  packet.rs  request.rs  response.rs  server.rs
src/message/: header.rs  mod.rs  option.rs  packet.rs  request.rs  response.rs
src/utils/: metallink.rs  mod.rs
utils/xoap/: README.md  Xargo.toml
utils/xoap/src/message/: request.rs
