[package]
name = "xoap"
version = "0.1.0"
description = "A CoAP library for bare-metal applications"
readme = "README.md"
documentation = ""
repository = ""
license = "MIT OR Apache-2.0"
authors = ["Joakim Lundberg <joakim@joakimlundberg.com>"]
keywords = ["CoAP", "xoap"]

[features]
# Used for "normal" operation
default = ["bincode","rustc-serialize","mio","url","num","rand","log","threadpool","enum_primitive"]
# Used for operation on embedded systems
baremetal = ["heapless","nb","cast"]

[dependencies]
cfg-if = "0.1.2"

# default dependencies
bincode = {version = "0.3.0", optional = true}
rustc-serialize = {version = "0.3", optional = true}
mio = {version = "0.5", optional = true}
url = {version = "0.2.36", optional = true}
num = {version = "0.1", optional = true}
rand = {version = "0.3", optional = true}
log = {version = "0.3", optional = true}
threadpool = {version = "1.3", optional = true}
enum_primitive = {version = "0.1.1", optional = true}

# Baremetal dependencies
heapless = {version = "0.2.1", optional = true}
nb = {git = "https://github.com/japaric/nb", optional = true}
cast = {default-features = false, version = "0.2.2", optional = true}

[dev-dependencies]
quickcheck = "0.2.27"

