[package]
name = "xoap"
version = "0.1.0"
description = "A CoAP library for bare-metal applications"
readme = "README.md"
documentation = ""
repository = ""
license = "MIT OR Apache-2.0"
authors = ["Joakim Lundberg <joakim@joakimlundberg.com>"]
keywords = ["CoAP", "xoap"]

[dependencies.heapless]
version = "0.4.0"


