[package]
name = "xoap"
version = "0.1.0"
authors = ["Joakim Lundberg <joakim@joakimlundberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5"

[dev-dependencies]
panic-abort = "0.3.2"
cortex-m-rt = "0.6.13"

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
#debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations